<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/businessImageView"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:contentDescription="@string/business_image"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/hwstore2"
        android:layout_alignParentTop="true"
        android:layout_below="@id/businessNameTextView"/>

    <TextView
        android:id="@+id/businessNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_error"
        android:gravity="center|center_horizontal"
        android:text="@string/business_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        />

    <TextView
        android:id="@+id/openinghoursTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/label_opening_hours"
        android:fontFamily="sans-serif-black"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:text="@string/label_opening_hours"
        android:textColor="@color/black"
        android:layout_below="@id/businessImageView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/businesshoursdetailsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opening_hours_details"
        android:layout_below="@id/openinghoursTextView"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:layout_alignStart="@id/addressTextView"/>

    <TextView
        android:id="@+id/contactuslabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/label_contact_us"
        android:textColor="@color/black"
        android:layout_below="@id/businesshoursdetailsTextView"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:layout_marginTop="8dp"/>

    <ImageView
        android:id="@+id/locationImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/location_icon"
        app:srcCompat="@android:drawable/ic_menu_mylocation"
        android:layout_below="@id/contactuslabelTextView"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"/>

    <TextView
        android:id="@+id/addressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_1"
        android:layout_below="@id/contactuslabelTextView"
        android:layout_toEndOf="@id/locationImageView"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"/>


    <ImageView
        android:id="@+id/phoneImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/locationImageView"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/phone_icon"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        app:srcCompat="@android:drawable/ic_menu_call" />

    <TextView
        android:id="@+id/phoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addressTextView"
        android:layout_marginStart="1dp"
        android:layout_marginTop="-1dp"
        android:layout_toEndOf="@id/phoneImageView"
        android:paddingStart="8dp"
        android:paddingTop="6dp"
        android:paddingEnd="0dp"
        android:text="@string/phone"
        android:layout_alignTop="@id/phoneImageView"/>

    <ImageView
        android:id="@+id/email_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/email_icon"
        app:srcCompat="@android:drawable/sym_action_email"
        android:layout_below="@id/phoneImageView"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:layout_marginTop="6dp"/>

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:paddingTop="3dp"
        android:layout_below="@id/phoneTextView"
        android:layout_toEndOf="@id/email_imageView"
        android:layout_alignTop="@id/email_imageView"/>

    <TextView
        android:id="@+id/aboutuslabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingEnd="0dp"
        android:paddingRight="8dp"
        android:text="@string/label_about_us"
        android:textColor="@color/black"
        android:layout_below="@id/email_imageView"
        />

    <TextView
        android:id="@+id/about_usTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/about_us"
        android:paddingLeft="8dp"
        android:paddingEnd="0dp"
        android:paddingRight="8dp"
        android:text="@string/about_us"
        android:layout_below="@id/aboutuslabelTextView"
        android:paddingStart="20dp"
        android:layout_marginTop="4dp"/>


</RelativeLayout>
    </ScrollView>